--- a/topics/logging.html
+++ b/topics/logging.html
@@ -99,7 +99,7 @@ this:</p>
     <span class="s">&#39;z.paypal&#39;</span><span class="p">:</span> <span class="p">{</span>
         <span class="s">&#39;level&#39;</span><span class="p">:</span> <span class="n">logging</span><span class="o">.</span><span class="n">DEBUG</span><span class="p">,</span>
     <span class="p">},</span>
-    <span class="s">&#39;z.sphinx&#39;</span><span class="p">:</span> <span class="p">{</span>
+    <span class="s">&#39;z.es&#39;</span><span class="p">:</span> <span class="p">{</span>
         <span class="s">&#39;handlers&#39;</span><span class="p">:</span> <span class="p">[</span><span class="s">&#39;null&#39;</span><span class="p">],</span>
     <span class="p">},</span>
 <span class="p">})</span>
