--- a/topics/production.html
+++ b/topics/production.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <link rel="top" title="zamboni 0.8 documentation" href="../index.html" />
-    <link rel="next" title="Search (powered by SphinxSearch)" href="search.html" />
+    <link rel="next" title="Services" href="services.html" />
     <link rel="prev" title="Setting Up Payments for Apps and Add-ons" href="payments.html" /> 
   </head>
   <body>
@@ -40,7 +40,7 @@
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="search.html" title="Search (powered by SphinxSearch)"
+          <a href="services.html" title="Services"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="payments.html" title="Setting Up Payments for Apps and Add-ons"
@@ -181,8 +181,8 @@ zamboni virtualenv.</p>
   <p class="topless"><a href="payments.html"
                         title="previous chapter">Setting Up Payments for Apps and Add-ons</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="search.html"
-                        title="next chapter">Search (powered by SphinxSearch)</a></p>
+  <p class="topless"><a href="services.html"
+                        title="next chapter">Services</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="../_sources/topics/production.txt"
@@ -215,7 +215,7 @@ zamboni virtualenv.</p>
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="search.html" title="Search (powered by SphinxSearch)"
+          <a href="services.html" title="Services"
              >next</a> |</li>
         <li class="right" >
           <a href="payments.html" title="Setting Up Payments for Apps and Add-ons"
