--- a/topics/services.html
+++ b/topics/services.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <link rel="top" title="zamboni 0.8 documentation" href="../index.html" />
     <link rel="next" title="Sphinx (but not the Search Engine)" href="sphinx.html" />
-    <link rel="prev" title="Search (powered by SphinxSearch)" href="search.html" /> 
+    <link rel="prev" title="Zamboni in Production" href="production.html" /> 
   </head>
   <body>
     <div class="related">
@@ -43,7 +43,7 @@
           <a href="sphinx.html" title="Sphinx (but not the Search Engine)"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="search.html" title="Search (powered by SphinxSearch)"
+          <a href="production.html" title="Zamboni in Production"
              accesskey="P">previous</a> |</li>
         <li><a href="../index.html">zamboni 0.8 documentation</a> &raquo;</li> 
       </ul>
@@ -80,8 +80,8 @@ gunicorn -c wsgi/verify.wsgi -b 127.0.0.1:9000 --debug verify:application</pre>
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
-  <p class="topless"><a href="search.html"
-                        title="previous chapter">Search (powered by SphinxSearch)</a></p>
+  <p class="topless"><a href="production.html"
+                        title="previous chapter">Zamboni in Production</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="sphinx.html"
                         title="next chapter">Sphinx (but not the Search Engine)</a></p>
@@ -120,7 +120,7 @@ gunicorn -c wsgi/verify.wsgi -b 127.0.0.1:9000 --debug verify:application</pre>
           <a href="sphinx.html" title="Sphinx (but not the Search Engine)"
              >next</a> |</li>
         <li class="right" >
-          <a href="search.html" title="Search (powered by SphinxSearch)"
+          <a href="production.html" title="Zamboni in Production"
              >previous</a> |</li>
         <li><a href="../index.html">zamboni 0.8 documentation</a> &raquo;</li> 
       </ul>
